# tungsten

./: .gitignore  CMakeLists.txt
cmake/: AddCompilerFlag.cmake  CXX11.cmake  OptimizeForArchitecture.cmake
serenity/core/: core.h  image.cc  math.h  matrix.h  memory.h  simd.h  thread.cc  time.h
serenity/ui/: window.cc  window.h
src/core/bvh/: BvhBuilder.cpp
src/core/cameras/: Camera.cpp  Camera.hpp  OutputBuffer.hpp  PinholeCamera.cpp  PinholeCamera.hpp
src/core/integrators/: Integrator.cpp  Integrator.hpp  TraceBase.cpp  TraceBase.hpp
src/core/integrators/bidirectional_path_tracer/: PathVertex.cpp
src/core/integrators/path_tracer/: PathTraceIntegrator.cpp  PathTraceIntegrator.hpp  PathTracer.cpp
src/core/integrators/photon_map/: PhotonTracer.cpp
src/core/io/: CliParser.cpp  CliParser.hpp  FileUtils.cpp  FileUtils.hpp  Scene.cpp  Scene.hpp
src/core/primitives/: TriangleMesh.cpp
src/core/renderer/: RendererSettings.hpp  TraceableScene.hpp
src/tungsten/: Shared.hpp  tungsten.cpp
